--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="menua">
                     <li><a href="index.html">Orrialde nagusia</a></li>
                     <li><a href="produktuak.html">Produktuak</a></li>
-                    <li><a href="#">Promozioak</a></li>
+                    <li><a href="promozioak.html">Promozioak</a></li>
                     <li><a href="#">Guri buruz</a></li>
                 </ul>
             </details>
@@ -111,7 +111,7 @@
             setInterval(() => moverCarrusel(contador + 1), 5000);
         });
     </script>
-    <script src="javascript2.js"></script>
+    <script src="js/orrialde-nagusia.js"></script>
 </body>
 
 </html>
