--- a/produktuak.html
+++ b/produktuak.html
@@ -23,7 +23,7 @@
                 <ul class="menua">
                     <li><a href="index.html">Orrialde nagusia</a></li>
                     <li><a href="produktuak.html">Produktuak</a></li>
-                    <li><a href="#">Promozioak</a></li>
+                    <li><a href="promozioak.html">Promozioak</a></li>
                     <li><a href="#">Guri buruz</a></li>
                 </ul>
             </details>
@@ -80,7 +80,7 @@
             </ul>
         </div>
     </footer>
-    <script src="javascript.js"></script>
+    <script src="js/javascript.js"></script>
 </body>
 
 </html>
