arreglo porcentaje descuento

--- a/promozioak.html
+++ b/promozioak.html
@@ -70,7 +70,7 @@
     <div class="escaparate">
         
         <article class="tarjeta">
-            <div class="etiqueta">-70%</div>
+            <div class="etiqueta"><P>-70%</P></div>
             <div class="foto">
                 <img src="img/camiseta real sociedad.jpg" alt="Vestido">
             </div>
@@ -84,7 +84,7 @@
         </article>
 
         <article class="tarjeta">
-            <div class="etiqueta">-50%</div>
+            <div class="etiqueta"><P>-50%</P></div>
             <div class="foto">
                 <img src="img/pantalon corto.jpg" alt="Sandalia">
             </div>
@@ -98,7 +98,7 @@
         </article>
 
         <article class="tarjeta">
-            <div class="etiqueta">-60%</div>
+            <div class="etiqueta"><P>-60%</P></div>
             <div class="foto">
                 <img src="img/Zapatillas deportivas blancas.png" alt="Zapatillas">
             </div>
@@ -112,7 +112,7 @@
         </article>
 
         <article class="tarjeta">
-            <div class="etiqueta">-15%</div>
+            <div class="etiqueta"><P>-15%</P></div>
             <div class="foto">
                 <img src="img/chaqueta vaquera.png" alt="Chaqueta">
             </div>
