--- a/promozioak.html
+++ b/promozioak.html
@@ -65,7 +65,7 @@
         </div>
     </div>
 
-    <h2 class="titulo-separador">OTRAS PROMOZIONES</h2>
+    <h2 class="titulo-separador">OTRAS PROMOCIONES</h2>
 
     <div class="escaparate">
         
