--- a/promozioak.html
+++ b/promozioak.html
@@ -48,7 +48,7 @@
             <p>Termina en:</p>
             
             <div class="contador">
-                <div class="tiempo">02<small>Ordu</small></div>
+                <div class="tiempo">02<small>horas</small></div>
                 <div class="dos-puntos">:</div>
                 <div class="tiempo">45<small>Min</small></div>
                 <div class="dos-puntos">:</div>
