--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="erosketaBaldintzak.html">Erosketa baldintzak</a>
         </div>
          <div class="oharlegalak">
-                <a href="ebentoak.html">Ebentoak</a>
+                <a href="ebentoak.html">© 2026 Indiusurbil</a>
                 <a href="klientearekikoArreta.html">Klientearekiko arreta</a>
         </div>
         <div class="logos">
