--- a/guriburuz.html
+++ b/guriburuz.html
@@ -137,6 +137,18 @@
                 <img src="img/logo negro.png" alt="Indiusurbil logo" />
             </a>
         </div>
+        <div class="oharlegalak">
+            <a href="oharLegalak.html">Ohar legalak</a>
+                <a href="pribatasunPolitikak.html">Pribatasun politikak</a>
+        </div>
+         <div class="oharlegalak">
+                <a href="cookiesPolitikak.html">Cookies politikak</a>
+                <a href="erosketaBaldintzak.html">Erosketa baldintzak</a>
+        </div>
+         <div class="oharlegalak">
+                <a href="ebentoak.html">© 2026 Indiusurbil</a>
+                <a href="klientearekikoArreta.html">Klientearekiko arreta</a>
+        </div>
         <div class="logos">
             <ul>
                 <li>
