--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="index.html">Orrialde nagusia</a></li>
                     <li><a href="produktuak.html">Produktuak</a></li>
                     <li><a href="promozioak.html">Promozioak</a></li>
-                    <li><a href="#">Guri buruz</a></li>
+                    <li><a href="guriburuz.html">Guri buruz</a></li>
                 </ul>
             </details>
             <div class="carrito">
