--- a/saskia.html
+++ b/saskia.html
@@ -21,10 +21,10 @@
             <details>
                 <summary></summary>
                 <ul class="menua">
-                    <li><a href="#">Orrialde nagusia</a></li>
-                    <li><a href="#">Produktuak</a></li>
-                    <li><a href="#">Promozioak</a></li>
-                    <li> <a href="#">Guri buruz</a></li>
+                    <li><a href="index.html">Orrialde nagusia</a></li>
+                    <li><a href="produktuak.html">Produktuak</a></li>
+                    <li><a href="promozioak.html">Promozioak</a></li>
+                    <li> <a href="guri_buruz.html">Guri buruz</a></li>
                 </ul>
             </details>
             <div class="carrito">
