--- a/produktuak.html
+++ b/produktuak.html
@@ -41,11 +41,11 @@
         <br>
         <h1>Produktuen Iragazkia</h1>
     <div class="botones">
-      <button id="produktuak" class="boton">Todos los productos</button>
-      <button id="camisetas" class="boton">camisetas</button>
-      <button id="pantalones" class="boton">Pantalones</button>
-      <button id="chaquetas" class="boton">Chaquetas</button>
-      <button id="zapatillas" class="boton">Zapatillas</button>
+      <button id="produktuak" class="boton">Produktu Guztiak</button>
+      <button id="camisetas" class="boton">Kamisetak</button>
+      <button id="pantalones" class="boton">Galtzak</button>
+      <button id="chaquetas" class="boton">Txaketak</button>
+      <button id="zapatillas" class="boton">Zapatillak</button>
     </div>
 
     <div class="produktuen-eremua">
