--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             <div class="carrusel-imagenes">
                 <div class="imagen" style="
                 background-image: url('https://images.unsplash.com/photo-1441986300917-64674bd600d8?w=1200&h=400&fit=crop');">
-                    <h1>COLECCIÓN PRINCIPAL</h1>
+                    <h1>BILDUMA NAGUSIA</h1>
                 </div>
                 <div class="imagen" style="
                 background-image: url('https://images.unsplash.com/photo-1469334031218-e382a71b716b?w=1200&h=400&fit=crop');">
-                    <h1>NUEVA TEMPORADA</h1>
+                    <h1>DENBORALDI BERRIA</h1>
                 </div>
                 <div class="imagen" style="
                 background-image: url('https://images.unsplash.com/photo-1483985988355-763728e1935b?w=1200&h=400&fit=crop');">
-                    <h1>OFERTAS ESPECIALES</h1>
+                    <h1>ESKAINTZA BEREZIAK</h1>
                 </div>
             </div>
         </section>
