--- a/promozioak.html
+++ b/promozioak.html
@@ -145,13 +145,31 @@
                 <img src="img/logo negro.png" alt="Indiusurbil logo" />
             </a>
         </div>
+        <div class="oharlegalak">
+            <a href="oharLegalak.html">Ohar legalak</a>
+                <a href="pribatasunPolitikak.html">Pribatasun politikak</a>
+        </div>
+         <div class="oharlegalak">
+                <a href="cookiesPolitikak.html">Cookies politikak</a>
+                <a href="erosketaBaldintzak.html">Erosketa baldintzak</a>
+        </div>
+         <div class="oharlegalak">
+                <a href="ebentoak.html">© 2026 Indiusurbil</a>
+                <a href="klientearekikoArreta.html">Klientearekiko arreta</a>
+        </div>
         <div class="logos">
             <ul>
-                <li><a href="https://Instagram.com" target="_blank"><img src="img/insta.png" alt="Instagram" /></a></li>
-                <li><a href="https://x.com" target="_blank"><img src="img/x.png" alt="x" /></a></li>
-                <li><a href="https://Facebook.com" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
+                <li>
+                    <a href="https://Instagram.com" target="_blank"><img src="img/insta.png" alt="Instagram" /></a>
                 </li>
-                <li><a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="linkedin" /></a>
+                <li>
+                    <a href="https://x.com" target="_blank"><img src="img/x.png" alt="x" /></a>
+                </li>
+                <li>
+                    <a href="https://Facebook.com" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="linkedin" /></a>
                 </li>
             </ul>
         </div>
