--- a/promozioak.html
+++ b/promozioak.html
@@ -45,8 +45,8 @@
 
             <div class="seccion-flash">
                 <div class="flash-texto">
-                    <h2>OFERTA FLASH</h2>
-                    <p>Termina en:</p>
+                    <h2>FLASH OFERTA</h2>
+                    <p>Bukatzen du:</p>
 
                     <div class="contador">
                         <div class="tiempo">02<small>Ordu</small></div>
@@ -56,9 +56,9 @@
                         <div class="tiempo">10<small>Seg</small></div>
                     </div>
 
-                    <h3>Zapatillas Nike</h3>
+                    <h3>Nike zapatillak</h3>
                     <p class="precio-grande"><del>4000€</del> <b>3200€</b></p>
-                    <button class="boton-flash">CCOMPRAR AHORA</button>
+                    <button class="boton-flash">EROSI ORAIN</button>
                 </div>
 
                 <div class="flash-imagen">
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <h2 class="titulo-separador">OTRAS PROMOZIONES</h2>
+            <h2 class="titulo-separador">BESTE PROMOZIOAK</h2>
 
             <div class="escaparate">
 
@@ -78,7 +78,7 @@
                         <img src="img/camiseta real sociedad.jpg" alt="Vestido">
                     </div>
                     <div class="info">
-                        <h3>Camiseta Real Sociedad</h3>
+                        <h3>Kamixeta Real Sociedad</h3>
                         <div class="precios">
                             <del>89.99€</del> <b>29.99€</b>
                         </div>
@@ -94,7 +94,7 @@
                         <img src="img/pantalon corto.jpg" alt="Sandalia">
                     </div>
                     <div class="info">
-                        <h3>Pantalon corto</h3>
+                        <h3> Galtza motza</h3>
                         <div class="precios">
                             <del>30.00€</del> <b>15.00€</b>
                         </div>
@@ -110,7 +110,7 @@
                         <img src="img/Zapatillas deportivas blancas.png" alt="Zapatillas">
                     </div>
                     <div class="info">
-                        <h3>Zapatillas Adidas </h3>
+                        <h3> Adidas zapatillak</h3>
                         <div class="precios">
                             <del>80.00€</del> <b>39.00€</b>
                         </div>
@@ -126,7 +126,7 @@
                         <img src="img/chaqueta vaquera.png" alt="Chaqueta">
                     </div>
                     <div class="info">
-                        <h3>Chaqueta vaquera</h3>
+                        <h3>denim jaka</h3>
                         <div class="precios">
                             <del>60.00€</del> <b>50.00€</b>
                         </div>
