--- a/saskia.html
+++ b/saskia.html
@@ -28,10 +28,26 @@
                 </ul>
             </details>
             <div class="carrito">
-            <a href="#"><img src="img/cesta.png" alt="cesta"></a>
+            <a href="saskia.html"><img src="img/cesta.png" alt="cesta"></a>
+            <span>(0)</span>
             </div>
         </nav>
     </header>
+    <main>
+        <h1>SASKIA</h1>
+        <table>
+            <tr>
+                <th>PRODUKTUAK</th>
+                <th>PREZIOA</th>
+                <th>KOPURUA</th>
+            </tr>
+            <tr>
+                <td></td>
+
+            </tr>
+
+        </table>
+    </main>
 
 
     <footer class="footer2">
