--- a/saskia.html
+++ b/saskia.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="eu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name ="author" content="Xabier, Juan eta Anartz">
+    <meta name="author" content="Xabier, Juan eta Anartz">
     <meta name="description" content="Hemen Indiusurbil-eko web orria egingo dugu">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="saskia.css">
     <title>Indiusurbil</title>
 </head>
 
@@ -28,33 +30,49 @@
                 </ul>
             </details>
             <div class="carrito">
-            <a href="saskia.html"><img src="img/cesta.png" alt="cesta"></a>
-            <span>(0)</span>
+                <a href="saskia.html"><img src="img/cesta.png" alt="cesta"></a>
+                <span>(0)</span>
             </div>
         </nav>
     </header>
     <main>
-        <h1>SASKIA</h1>
-        <table>
-            <tr>
-                <th>PRODUKTUAK</th>
-                <th>PREZIOA</th>
-                <th>KOPURUA</th>
-            </tr>
-            <tr>
-                <td></td>
+        <div class="saskia_edukia">
+            <p class="saskia_hutsa">Zure Saskia hutsa dago</p>
+            <div class="saskia_produktuak">
+                <div class="produktu1">
+                    <img src="img/camiseta blanca.png" alt="Kamiseta Txuria">
+                    <div class="izena">
+                        <h4>Produktua</h4>
+                        <h3><b>Kamiseta Txuria</b></h3>
+                    </div>
+                    <div class="prezioa">
+                        <h4>Prezioa</h4>
+                        <h3><b>15 €</b></h3>
+                    </div>
+                    <div class="kantidadea">
+                        <h4>kantidadea</h4>
+                        <h3><b>0</b></h3>
+                    </div>
+                    <div class="guztira">
+                        <h4>Guztira</h4>
+                        <h3><b>0 €</b></h3>
+                    </div>
+                    <div class="ezabatu">
+                        <button class="papelera"><img src="img/papelera.png" alt="Papelera" class="papelera"></button>
+                    </div>
 
-            </tr>
 
-        </table>
+
+                </div>
+            </div>
     </main>
 
 
     <footer class="footer2">
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo negro.png" alt="Indiusurbil logo"/>
-                
+                <img src="img/logo negro.png" alt="Indiusurbil logo" />
+
             </a>
         </div>
         <div class="logos">
@@ -68,4 +86,5 @@
     </footer>
 
 </body>
+
 </html>
