--- a/saskia.html
+++ b/saskia.html
@@ -31,7 +31,7 @@
             </details>
             <div class="carrito">
                 <a href="saskia.html"><img src="img/cesta.png" alt="cesta"></a>
-                <span>(0)</span>
+                <span>0</span>
             </div>
         </nav>
     </header>
@@ -68,19 +68,38 @@
     </main>
 
 
-    <footer class="footer2">
+       <footer class="footer2">
         <div class="logo">
             <a href="index.html">
                 <img src="img/logo negro.png" alt="Indiusurbil logo" />
-
             </a>
+        </div>
+        <div class="oharlegalak">
+            <a href="oharLegalak.html">Ohar legalak</a>
+                <a href="pribatasunPolitikak.html">Pribatasun politikak</a>
+        </div>
+         <div class="oharlegalak">
+                <a href="cookiesPolitikak.html">Cookies politikak</a>
+                <a href="erosketaBaldintzak.html">Erosketa baldintzak</a>
+        </div>
+         <div class="oharlegalak">
+                <a href="ebentoak.html">© 2026 Indiusurbil</a>
+                <a href="klientearekikoArreta.html">Klientearekiko arreta</a>
         </div>
         <div class="logos">
             <ul>
-                <li><a href="https://Instagram.com" target="_blank"><img src="img/insta.png" alt="Instagram"></a></li>
-                <li><a href="https://x.com" target="_blank"><img src="img/x.png" alt="x"></a></li>
-                <li><a href="https://Facebook.com" target="_blank"><img src="img/facebook.png" alt="Facebook"></a></li>
-                <li><a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a></li>
+                <li>
+                    <a href="https://Instagram.com" target="_blank"><img src="img/insta.png" alt="Instagram" /></a>
+                </li>
+                <li>
+                    <a href="https://x.com" target="_blank"><img src="img/x.png" alt="x" /></a>
+                </li>
+                <li>
+                    <a href="https://Facebook.com" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="linkedin" /></a>
+                </li>
             </ul>
         </div>
     </footer>
