--- a/saskia.html
+++ b/saskia.html
@@ -31,7 +31,7 @@
             </details>
             <div class="carrito">
                 <a href="saskia.html"><img src="img/cesta.png" alt="cesta"></a>
-                <span>0</span>
+                <span>[0]</span>
             </div>
         </nav>
     </header>
