--- a/web/index.html
+++ b/web/index.html
@@ -67,16 +67,16 @@
             </a>
         </div>
         <div class="oharlegalak">
-            <a href="oharLegalak.html">Ohar legalak</a>
-                <a href="pribatasunPolitikak.html">Pribatasun politikak</a>
+            <a href="#">Ohar legalak</a>
+                <a href="#">Pribatasun politikak</a>
         </div>
          <div class="oharlegalak">
-                <a href="cookiesPolitikak.html">Cookies politikak</a>
-                <a href="erosketaBaldintzak.html">Erosketa baldintzak</a>
+                <a href="#">Cookies politikak</a>
+                <a href="#">Erosketa baldintzak</a>
         </div>
          <div class="oharlegalak">
-                <a href="ebentoak.html">© 2026 Indiusurbil</a>
-                <a href="klientearekikoArreta.html">Klientearekiko arreta</a>
+                <a href="#">© 2026 Indiusurbil</a>
+                <a href="#">Klientearekiko arreta</a>
         </div>
         <div class="logos">
             <ul>
