--- a/saskia.html
+++ b/saskia.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Hemen Indiusurbil-eko web orria egingo dugu">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="saskia.css">
+    <script src="saskia.js" defer></script>
     <title>Indiusurbil</title>
 </head>
 
@@ -41,7 +42,7 @@
             <p><b>Hona hemen zure produktu guztiak</b></p>
         </div>
         <div class="saskia_edukia">
-            <p class="saskia_hutsa">Zure Saskia hutsa dago</p>
+            <p class="saskia_hutsa">Zure saskia hutsa dago 🥺</p>
             <div class="saskia_produktuak">
                 <div class="produktu">
                     <img src="img/camiseta blanca.png" alt="Kamiseta Txuria">
@@ -1555,8 +1556,6 @@
                 </div>
             </div>
     </main>
-
-
     <footer class="footer2">
         <div class="logo">
             <a href="index.html">
