--- a/produktuak.html
+++ b/produktuak.html
@@ -28,7 +28,7 @@
                 </ul>
             </details>
             <div class="carrito">
-                <a href="#"><img src="img/cesta.png" alt="cesta" /></a>
+                <a href="saskia.html"><img src="img/cesta.png" alt="cesta" /></a>
             </div>
         </nav>
     </header>
