--- a/web/promozioak.html
+++ b/web/promozioak.html
@@ -28,7 +28,8 @@
                 </ul>
             </details>
             <div class="carrito">
-                <a href="#"><img src="img/cesta.png" alt="cesta" /></a>
+                <a href="saskia.html"><img src="img/cesta.png" alt="cesta" /></a>
+                <span>[3]</span>
             </div>
         </nav>
     </header>
