--- a/web/saskia.html
+++ b/web/saskia.html
@@ -116,43 +116,45 @@
                     <p><b>20 €</b></p>
                 </div>
             </div>
-            <div id="produktu" class="produktu">
-                <img src="img/chaqueta vaquera.png" alt="Txaketa Bakera">
-                <div class="izena">
-                    <h4>Produktua</h4>
-                    <p><b>Txaketa Bakera</b></p>
-                </div>
-                <div class="taila">
-                    <label for="taila">
-                        <h4>Aukeratu zure taila:</h4>
-                    </label>
-                    <select name="tailak" id="taila">
-                        <option value="xs">XS</option>
-                        <option value="s">S</option>
-                        <option value="m">M</option>
-                        <option value="l">L</option>
-                        <option value="xl">XL</option>
-                    </select>
-                </div>
-                <div class="prezioa">
-                    <h4>Prezioa</h4>
-                    <p><b>60 €</b>
-                    <p>
-                </div>
-                <div class="kantitatea-edukia">
+             <div class="produktu">
+                    <img src="img/Camiseta azul claro.png" alt="Kamiseta Urdin Argia">
+                    <div class="izena">
+                        <h4>Produktua</h4>
+                        <p><b>Kamiseta Urdin</b></p>
+                        <p class="behekoa"><b>Argia</b></p>
+                    </div>
+                    <div class="taila">
+                        <label for="taila">
+                            <h4>Aukeratu zure taila:</h4>
+                        </label>
+                        <select name="tailak" id="taila">
+                            <option value="xs">XS</option>
+                            <option value="s">S</option>
+                            <option value="m">M</option>
+                            <option value="l">L</option>
+                            <option value="xl">XL</option>
+                        </select>
+                    </div>
+                    <div class="prezioa">
+                        <h4>Prezioa</h4>
+                        <p><b>30 €</b>
+                        <p>
+                    </div>
+                     <div class="kantitatea-edukia">
                     <span><b>Kantitatea:</b></span>
                     <div class="kantitatea">
                         <button class="kendu">-</button>
-                        <span class="kantitatea2">0</span>
+                        <span class="kantitatea2">1</span>
                         <button class="gehitu">+</button>
                     </div>
                 </div>
-                <div class="guztira">
-                    <h4>Guztira</h4>
-                    <p><b>60 €</b></p>
+                    <div class="guztira">
+                        <h4>Guztira</h4>
+                        <p><b>0 €</b></p>
+                    </div>
+                    
                 </div>
-                <div class="ezabatu">
-                </div>
+
 
             </div>
             <div class="saskia_ekintzak">
