--- a/web/saskia.html
+++ b/web/saskia.html
@@ -43,7 +43,7 @@
         </div>
         <div class="saskia_edukia">
             <div id="saskia-produktuak"></div>
-            <div class="produktu">
+            <div class="produktu"id="produktu">
                 <img src="img/camiseta blanca.png" alt="Kamiseta Txuria">
                 <div class="izena">
                     <h4>Produktua</h4>
@@ -79,7 +79,7 @@
                     <p><b>15 €</b></p>
                 </div>
             </div>
-            <div id="produktu" class="produktu">
+            <div id="produktu" class="produktu"id="produktu">
                 <img src="img/camiseta de rayas granate.png" alt="Marradun Kamiseta granatea">
                 <div class="izena">
                     <h4>Produktua</h4>
@@ -116,7 +116,7 @@
                     <p><b>20 €</b></p>
                 </div>
             </div>
-             <div class="produktu">
+             <div class="produktu"id="produktu">
                     <img src="img/Camiseta azul claro.png" alt="Kamiseta Urdin Argia">
                     <div class="izena">
                         <h4>Produktua</h4>
@@ -177,7 +177,6 @@
                         <button onclick="itxiDialogoa()">❌</button>
                     </div>
                 </div>
-
     </main>
     <footer class="footer2">
         <div class="logo">
@@ -214,7 +213,7 @@
             </ul>
         </div>
     </footer>
-
+<script src="js/saskia.js"></script>
 </body>
 
 </html>
