--- a/web/saskia.html
+++ b/web/saskia.html
@@ -159,7 +159,7 @@
             </div>
             <div class="saskia_ekintzak">
                 <div class="ezker_ekintzak">
-                    <button id="hustu" onclick="hustuSaskia()" class="hustu"> SASKIA HUSTU </button>
+                    <button id="hustu" onclick="hustuSaskia(), guztiraaldatuSaskia()" class="hustu"> SASKIA HUSTU </button>
                 </div>
                 <div class="eskubi_ekintzak">
                     <div class="saskiko_prezio_totala">
