--- a/web/saskia.html
+++ b/web/saskia.html
@@ -159,12 +159,12 @@
             </div>
             <div class="saskia_ekintzak">
                 <div class="ezker_ekintzak">
-                    <button id="hustu" onclick="hustuSaskia(), guztiraaldatuSaskia()" class="hustu"> SASKIA HUSTU </button>
+                    <button id="hustu" onclick="hustuSaskia(), guztiraAldatu()" class="hustu"> SASKIA HUSTU </button>
                 </div>
                 <div class="eskubi_ekintzak">
                     <div class="saskiko_prezio_totala">
                         <h2>Guztira:</h2>
-                        <p><b>65 €</b></p>
+                        <p><b id="guztira">65 €</b></p>
                     </div>
                     <div class="erosketa_ordaindu">
                         <button type="button" onclick="irekiDialogoa()" class="ordaindu">
